# programming-projects

./: README.md  multiAgents.py
Multi-Tenant AI RAG System/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MASTER_PROMPT.md  README.md  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml  requirements.txt
Multi-Tenant AI RAG System/alembic/: env.py
Multi-Tenant AI RAG System/app/: __init__.py  config.py  main.py  worker.py
Multi-Tenant AI RAG System/docs/: CHANGELOG.md  architecture.md  runbook.md
Multi-Tenant AI RAG System/frontend/: index.html
Multi-Tenant AI RAG System/k8s/: README-sealed-secrets.md  api-deployment.yml  cert-manager-issuer.yml  chromadb.yml  configmap.yml  hpa.yml  ingress.yml  migration-job.yml  namespace.yml  network-policies.yml  pdb.yml  postgres.yml  pvc.yml  redis.yml  sealed-secret.yml  secret.yml  worker-deployment.yml
Multi-Tenant AI RAG System/scripts/: backup_db.sh  restore_db.sh
Multi-Tenant AI RAG System/tests/: conftest.py  create_test_file.py  test_2fa.py  test_api_key_expiration.py  test_api_key_rate_limit.py  test_api_keys.py  test_audit_detail.py  test_audit_logs.py  test_auth.py  test_billing.py  test_cache.py  test_chat.py  test_chat_edge_cases.py  test_chat_pagination.py  test_chat_sanitize.py  test_chromadb_config.py  test_cleanup.py  test_dashboard.py  test_documents.py  test_export.py  test_metrics.py  test_migrations.py  test_rate_limit.py  test_sanitize.py  test_search.py  test_security_features.py  test_settings.py  test_soft_delete.py  test_tenant_isolation.py  test_token_blacklist.py  test_tracing.py  test_users.py  test_vector_cache.py  test_webhooks.py  test_ws_chat.py
(+183 files in other folders)
