[project]
name = "multi-tenant-ai-rag-system"
version = "0.5.0"
description = "Production-ready multi-tenant AI RAG system with FastAPI, SQLAlchemy, and ChromaDB"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.48",
    "alembic>=1.12.1",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.1",
    "python-multipart>=0.0.6",
    "chromadb>=0.4.17",
    "openai>=1.3.5",
    "pdfplumber>=0.10.0",
    "python-docx>=0.8.11",
    "tiktoken>=0.5.0",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "sentry-sdk[fastapi]>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "httpx>=0.25.2",
    "ruff>=0.1.6",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults (FastAPI Depends)
    "UP007", # use X | Y for union types (keep Optional for clarity)
    "UP042", # prefer StrEnum (keep str+Enum for Python <3.11 compat)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
